[project]
name = "ouchn-students"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddddocr>=1.5.6",
    "playwright>=1.55.0",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
